--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- END PAGE TITLE AREA AND BOX -->
   <div id="content">
 
-
+<h2>test!!!</h2>
 <h2> <font color="red"> Our lab has moved to the Department of Biomedical Informatics, the Ohio State University in August 2018. This homepage will be redirected to a new URL at Ohio State University in the near future.</font> </h2> </p>
 
 
