--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
    <ul>
-    <li><a href="http://www.healthcare.uiowa.edu/labs/au/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ UNIV. OF IOWA</a></li>
+    <li><a href="http://www.http://augroup.org/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ Ohio State University</a></li>
   </ul>
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
