--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au">Home Page</a></li>
+      <li><a href="http://www.augroup.org">Home Page</a></li>
       <li><a href="http://www.healthcare.uiowa.edu/labs/au/publications">Publications</a></li>
       <li><a href="http://www.healthcare.uiowa.edu/labs/au/labmembers">Lab Members</a></li>
       <li><a href="http://www.healthcare.uiowa.edu/labs/au/utility_script.asp">Utilities</a></li>
@@ -293,7 +293,7 @@
   
         <h2>Useful links</h2>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/">Au Lab</a> - Au Lab homepage </li>
+      <li><a href="http://www.augroup.org">Au Lab</a> - Au Lab homepage </li>
     </ul>
     <ul>
       <li><a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> - Novel splice junction discovery</li>
