--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     </ul>
 
 
-  <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+  <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
 </div><div id="footer">
     <ul>
       <li>&copy; <a href=" http://www.healthcare.uiowa.edu/labs/au/">Kin Fai Au</a>. All Rights Reserved.</li>
