--- a/Publications/Publications.html
+++ b/Publications/Publications.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-  <title>The Statistical Bioinformatics Lab @ Univ. of iowa</title>
+  <title>The Statistical Bioinformatics Lab @ The Ohio State University </title>
   
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
@@ -28,7 +28,7 @@
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
    <ul>
-    <li><a href="http://www.healthcare.uiowa.edu/labs/au/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ UNIV. OF IOWA</a></li>
+    <li><a href="http://www.augroup.org/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ The Ohio State University</a></li>
   </ul>
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
@@ -286,7 +286,7 @@ D.K., <b>Au, K.F.</b>, Stoltz, <span class=GramE>D.A</span>. <br>
   
         <h2>Useful links</h2>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/">Au Lab</a> - Au Lab homepage </li>
+      <li><a href="http://www.augroup.org">Au Lab</a> - Au Lab homepage </li>
     </ul>
     <ul>
       <li><a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> - Novel splice junction discovery</li>
@@ -326,11 +326,11 @@ D.K., <b>Au, K.F.</b>, Stoltz, <span class=GramE>D.A</span>. <br>
     </ul>
 
 
-  <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+  <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
 </div><div id="footer">
     <ul>
-      <li>&copy; <a href=" http://www.healthcare.uiowa.edu/labs/au/">Kin Fai Au</a>. All Rights Reserved.</li>
-      <li><a href="http://www.uiowa.edu/">University of Iowa</a>, IA 52242.</li>
+      <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
+ 
     </ul>
 </div>
   
