--- a/Publications/Publications.html
+++ b/Publications/Publications.html
@@ -241,8 +241,8 @@ D.K., <b>Au, K.F.</b>, Stoltz, <span class=GramE>D.A</span>. <br>
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au">Home Page</a></li>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/publications">Publications</a></li>
+      <li><a href="http://www.augroup.org">Home Page</a></li>
+      <li><a href="http://www.augroup.org/Publications/Publications.html">Publications</a></li>
       <li><a href="http://www.healthcare.uiowa.edu/labs/au/labmembers">Lab Members</a></li>
       <li><a href="http://www.healthcare.uiowa.edu/labs/au/utility_script.asp">Utilities</a></li>
       <li><a href="http://www.healthcare.uiowa.edu/labs/au/contact/">Contact</a></li>
