--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -85,7 +85,7 @@
 
 
  <tr>
-    <td valign="top"><img src="images/diana2017.jpg" width="140" ></td>
+    <td valign="top"><img src="images/Diana2017.jpg" width="140" ></td>
     <td valign="top">
          <h1>Diana (Yue) Zhao</h1><br>
       <ul>
