--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
     <h2>Site Map</h2>
     <ul>
       <li><a href="http://www.augroup.org">Home Page</a></li>
-      <li><a href="http://www.augroup.org/labs/au/publications">Publications</a></li>
-      <li><a href="http://www.augroup.org/labs/au/labmembers">Lab Members</a></li>
-      <li><a href="http://www.augroup.org/labs/au/utility_script.asp">Utilities</a></li>
-      <li><a href="http://www.augroup.org/labs/au/contact/">Contact</a></li>
+      <li><a href="http://www.augroup.org/Publications/Publications">Publications</a></li>
+      <li><a href="http://www.augroup.org/labmembers/labmembers">Lab Members</a></li>
+      <li><a href="http://www.augroup.org/utility/utility_script.asp">Utilities</a></li>
+      <li><a href="http://www.augroup.org/contact/contact/">Contact</a></li>
     </ul>
 
     <h2>Software</h2>
