--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<title>The Statistical Bioinformatics Lab @ The Ohio State University </title>
+<title>The Statistical Bioinformatics Lab @ Univ. of iowa</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
@@ -26,7 +27,7 @@
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
    <ul>
-    <li><a href="http://www.augroup.org/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ The Ohio State University</a></li>
+    <li><a href="http://www.healthcare.uiowa.edu/labs/au/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ UNIV. OF IOWA</a></li>
   </ul>
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
@@ -53,7 +54,7 @@
   <div id="content">
 
 
-</p>
+<h2> <font color="red"> Our lab has moved to the Department of Biomedical Informatics, the Ohio State University in August 2018. This homepage will be redirected to a new URL at Ohio State University in the near future.</font> </h2> </p>
 
 
 <h2>Openings</h2> </p>
@@ -248,11 +249,11 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="http://www.augroup.org">Home Page</a></li>
-      <li><a href="http://www.augroup.org/Publications/Publications">Publications</a></li>
-      <li><a href="http://www.augroup.org/labmembers/labmembers">Lab Members</a></li>
-      <li><a href="http://www.augroup.org/utility/utility_script.asp">Utilities</a></li>
-      <li><a href="http://www.augroup.org/contact/contact/">Contact</a></li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au">Home Page</a></li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au/publications">Publications</a></li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au/labmembers">Lab Members</a></li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au/utility_script.asp">Utilities</a></li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au/contact/">Contact</a></li>
     </ul>
 
     <h2>Software</h2>
@@ -293,7 +294,7 @@
   
         <h2>Useful links</h2>
     <ul>
-      <li><a href="http://www.augroup.org">Au Lab</a> - Au Lab homepage </li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au/">Au Lab</a> - Au Lab homepage </li>
     </ul>
     <ul>
       <li><a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> - Novel splice junction discovery</li>
@@ -333,7 +334,7 @@
     </ul>
 
 
-  <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
+  <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
 </div><div id="footer">
     <ul>
       <li>&copy; <a href=" http://www.healthcare.uiowa.edu/labs/au/">Kin Fai Au</a>. All Rights Reserved.</li>
