--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<title>The Statistical Bioinformatics Lab @ Univ. of iowa</title>
+<title>The Statistical Bioinformatics Lab @ The Ohio State University </title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
@@ -13,10 +12,8 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-50750315-1', 'uiowa.edu');
   ga('send', 'pageview');
-
 </script>
 </head>
 
@@ -27,7 +24,7 @@
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
    <ul>
-    <li><a href="http://www.healthcare.uiowa.edu/labs/au/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ UNIV. OF IOWA</a></li>
+    <li><a href="http://www.augroup.org/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ The Ohio State University</a></li>
   </ul>
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
@@ -54,7 +51,7 @@
   <div id="content">
 
 
-<h2> <font color="red"> Our lab has moved to the Department of Biomedical Informatics, the Ohio State University in August 2018. This homepage will be redirected to a new URL at Ohio State University in the near future.</font> </h2> </p>
+</p>
 
 
 <h2>Openings</h2> </p>
@@ -249,11 +246,11 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au">Home Page</a></li>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/publications">Publications</a></li>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/labmembers">Lab Members</a></li>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/utility_script.asp">Utilities</a></li>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/contact/">Contact</a></li>
+      <li><a href="http://www.augroup.org">Home Page</a></li>
+      <li><a href="http://www.augroup.org/Publications/Publications">Publications</a></li>
+      <li><a href="http://www.augroup.org/labmembers/labmembers">Lab Members</a></li>
+      <li><a href="http://www.augroup.org/utility/utility_script.asp">Utilities</a></li>
+      <li><a href="http://www.augroup.org/contact/contact/">Contact</a></li>
     </ul>
 
     <h2>Software</h2>
@@ -294,7 +291,7 @@
   
         <h2>Useful links</h2>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/">Au Lab</a> - Au Lab homepage </li>
+      <li><a href="http://www.augroup.org">Au Lab</a> - Au Lab homepage </li>
     </ul>
     <ul>
       <li><a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> - Novel splice junction discovery</li>
@@ -334,7 +331,7 @@
     </ul>
 
 
-  <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+  <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
 </div><div id="footer">
     <ul>
       <li>&copy; <a href=" http://www.healthcare.uiowa.edu/labs/au/">Kin Fai Au</a>. All Rights Reserved.</li>
@@ -349,17 +346,14 @@
 
 
 <script type="text/javascript">
-
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-23879262-1']);
   _gaq.push(['_trackPageview']);
-
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
 </script>
 
 
