--- a/Publications/Publications.html
+++ b/Publications/Publications.html
@@ -242,11 +242,12 @@ D.K., <b>Au, K.F.</b>, Stoltz, <span class=GramE>D.A</span>. <br>
     <h2>Site Map</h2>
     <ul>
       <li><a href="http://www.augroup.org">Home Page</a></li>
-      <li><a href="http://www.augroup.org/Publications/Publications.html">Publications</a></li>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/labmembers">Lab Members</a></li>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/utility_script.asp">Utilities</a></li>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/contact/">Contact</a></li>
+      <li><a href="http://www.augroup.org/Publications/Publications">Publications</a></li>
+      <li><a href="http://www.augroup.org/labmembers/labmembers">Lab Members</a></li>
+      <li><a href="http://www.augroup.org/utility/utility_script.asp">Utilities</a></li>
+      <li><a href="http://www.augroup.org/contact/contact/">Contact</a></li>
     </ul>
+
 
     <h2>Software</h2>
     <ul>
