--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <li><a href="http://www.augroup.org">Home Page</a></li>
       <li><a href="http://www.augroup.org/Publications/Publications">Publications</a></li>
       <li><a href="http://www.augroup.org/labmembers/labmembers">Lab Members</a></li>
-      <li><a href="http://www.augroup.org/utility/utility_script.asp">Utilities</a></li>
+      <li><a href="http://www.augroup.org/utilities/utilities.html">Utilities</a></li>
       <li><a href="http://www.augroup.org/contact/contact/">Contact</a></li>
     </ul>
 
