--- a/utilities/utilities.html
+++ b/utilities/utilities.html
@@ -124,10 +124,9 @@
       <li><a href="http://www.augroup.org">Home Page</a></li>
       <li><a href="http://www.augroup.org/Publications/Publications">Publications</a></li>
       <li><a href="http://www.augroup.org/labmembers/labmembers">Lab Members</a></li>
-      <li><a href="http://www.augroup.org/utility/utility_script.asp">Utilities</a></li>
-      <li><a href="http://www.augroup.org/contact/contact/">Contact</a></li>
+      <li><a href="http://www.augroup.org/utilities/utilities.html">Utilities</a></li>
+      <li><a href="http://www.augroup.org/contact/contact.html/">Contact</a></li>
     </ul>
-
 
     <h2>Software</h2>
     <ul>
