--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -28,7 +28,7 @@
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
  <ul>
-    <li><a href=" http://www.healthcare.uiowa.edu/labs/au/">Au Lab - The Statistical Bioinformatics Lab @ Univ. of iowa</a></li>
+    <li><a href="http://www.augroup.org/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ The Ohio State University</a></li>
   </ul>
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
@@ -169,70 +169,6 @@
   </tr>
 
 
-
-<tr>
-    <td valign="top"><img src="images/YuruWang.jpeg" width="140" ></td>
-    <td valign="top">
-          <h1>Yuru Wang</h1><br>
-      <ul>
-
-  <b>Master Student</b>
-    <br><a href="https://informatics.uiowa.edu/study-opportunities/graduate-program/">Interdisciplinary Graduate Program in Informatics</a>
-    <br>Joined Lab in 2018
-
-
-      </ul>
-    </td>
-  </tr>
-
-
-<tr>
-    <td valign="top"><img src="images/YijiaSun.jpeg" width="140" ></td>
-    <td valign="top">
-          <h1>Yijia Sun</h1><br>
-      <ul>
-
-  <b>Master Student</b>
-    <br><a href="https://informatics.uiowa.edu/study-opportunities/graduate-program/">Interdisciplinary Graduate Program in Informatics</a>
-    <br>Joined Lab in 2018
-
-
-      </ul>
-    </td>
-  </tr>
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-<tr>
-    <td valign="top"><img src="images/YunyiLi.jpg" width="140" ></td>
-    <td valign="top">
-          <h1>Yunyi Li</h1><br>
-      <ul>
-
-  <b>Volunteer</b>
-    <br><a href="http://www.medicine.uiowa.edu/InternalMedicine/">Department of Internal Medicine</a>
-    <br>Joined Lab in 2018
-
-
-      </ul>
-    </td>
-  </tr>
-
-
-
-
-
    
 
 </table>
@@ -352,8 +288,9 @@
   <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
 </div><div id="footer">
     <ul>
-      <li>&copy; <a href=" http://www.healthcare.uiowa.edu/labs/au/">Kin Fai Au</a>. All Rights Reserved.</li>
-      <li><a href="http://www.uiowa.edu/">University of Iowa</a>, IA 52242.</li>
+  <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
+ 	<li><a href="https://www.osu.edu/">The Ohio State University</a>, OH 43210.</li>
+
     </ul>
 </div>
   
