--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -144,7 +144,7 @@
           <h1>Zujun Liu</h1><br>
       <ul>
 
-  <b>Research Assistant</b>
+  <b>Research Associate</b>
     <br><a href="http://www.medicine.uiowa.edu/InternalMedicine/">Department of Internal Medicine</a>
     <br>Joined Lab in 2017
 
@@ -187,9 +187,12 @@
 <br>
 <li>Anthony Rhoads, Master student (2014-2015)</li>
 <li>Rui Jin, Master student (2015)</li>
+<li>Yijia Sun, Master student (2018)</li>
+<li>Yuru Wang, Master student (2018)</li>
 <li>Dixian Zhu, Master student (2017-2018)</li>
 <br>
 <li>Haomin Li, Undergraduate student (2017-2018)</li>
+<li>Yunyi Li, Volunteer (2018)</li>
 <li>Yichao Shen, Intern (2018)</li>
         
 
