--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -288,7 +288,7 @@
     </ul>
 
 
-  <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+  <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
 </div><div id="footer">
     <ul>
   <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
