--- a/contact/contact.html
+++ b/contact/contact.html
@@ -28,7 +28,7 @@
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
  <ul>
-    <li><a href=" http://www.healthcare.uiowa.edu/labs/au/">Au Lab - The Statistical Bioinformatics Lab @ Univ. of iowa</a></li>
+     <li><a href="http://www.augroup.org/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ The Ohio State University</a></li>
   </ul>
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
