--- a/utilities/utilities.html
+++ b/utilities/utilities.html
@@ -121,11 +121,11 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="http://www.augroup.org">Home Page</a></li>
-      <li><a href="http://www.augroup.org/Publications/Publications">Publications</a></li>
-      <li><a href="http://www.augroup.org/labmembers/labmembers">Lab Members</a></li>
-      <li><a href="http://www.augroup.org/utilities/utilities.html">Utilities</a></li>
-      <li><a href="http://www.augroup.org/contact/contact.html/">Contact</a></li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au">Home Page</a></li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au/publications">Publications</a></li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au/labmembers">Lab Members</a></li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au/utility_script.asp">Utilities</a></li>
+      <li><a href="http://www.healthcare.uiowa.edu/labs/au/contact/">Contact</a></li>
     </ul>
 
     <h2>Software</h2>
