--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -168,6 +168,21 @@
     </td>
   </tr>
 
+     
+     
+     <tr>
+    <td valign="top"><img src="images/audrey_pic.jpg" width="140" ></td>
+    <td valign="top">
+          <h1>Audrey Bollas</h1><br>
+      <ul>
+
+  <b>PhD Student</b>
+    <br>Joined Lab in 2018
+
+
+      </ul>
+    </td>
+  </tr>
 
    
 
