--- a/utilities/utilities.html
+++ b/utilities/utilities.html
@@ -27,7 +27,7 @@
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
    <ul>
-    <li><a href="http://www.healthcare.uiowa.edu/labs/au/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ UNIV. OF IOWA</a></li>
+    <li><a href="http://www.augroup.org/">AU LAB - THE STATISTICAL BIOINFORMATICS LAB @ The Ohio State University</a></li>
   </ul>
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
@@ -206,11 +206,11 @@
     </ul>
 
 
-  <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+  <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
 </div><div id="footer">
     <ul>
-      <li>&copy; <a href=" http://www.healthcare.uiowa.edu/labs/au/">Kin Fai Au</a>. All Rights Reserved.</li>
-      <li><a href="http://www.uiowa.edu/">University of Iowa</a>, IA 52242.</li>
+      <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
+      <li><a href="https://www.osu.edu/">The Ohio State University</a>, OH 43210.</li>
     </ul>
 </div>
   
