--- a/IDP-denovo.20160829/idp-denovo.html
+++ b/IDP-denovo.20160829/idp-denovo.html
@@ -53,7 +53,7 @@
 
 	    <li>&nbsp;</li>
 
-		<li><img src="images/figure2_extensionPipeline.png" width="220" height="200">&nbsp;&nbsp;&nbsp;&nbsp;</li>
+		<li><img src="images/IDP-denovo.png" width="220" height="200">&nbsp;&nbsp;&nbsp;&nbsp;</li>
 		
 	</ul>
     </div>
