--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -222,7 +222,8 @@
       <li><a href="http://www.augroup.org/Publications/Publications">Publications</a></li>
       <li><a href="http://www.augroup.org/labmembers/labmembers">Lab Members</a></li>
       <li><a href="http://www.augroup.org/utilities/utilities.html">Utilities</a></li>
-      <li><a href="http://www.augroup.org/contact/contact.html/">Contact</a></li>
+      <li><a href="http://www.augroup.org/contact/contact">Contact</a></li>
+
     </ul>
 
     <h2>Software</h2>
