--- a/Publications/Publications.html
+++ b/Publications/Publications.html
@@ -244,8 +244,8 @@ D.K., <b>Au, K.F.</b>, Stoltz, <span class=GramE>D.A</span>. <br>
       <li><a href="http://www.augroup.org">Home Page</a></li>
       <li><a href="http://www.augroup.org/Publications/Publications">Publications</a></li>
       <li><a href="http://www.augroup.org/labmembers/labmembers">Lab Members</a></li>
-      <li><a href="http://www.augroup.org/utilities/utilities.html">Utilities</a></li>
-      <li><a href="http://www.augroup.org/contact/contact.html/">Contact</a></li>
+      <li><a href="http://www.augroup.org/utilities/utilities">Utilities</a></li>
+      <li><a href="http://www.augroup.org/contact/contact">Contact</a></li>
     </ul>
 
 
