--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -184,6 +184,21 @@
     </td>
   </tr>
 
+     
+     <tr>
+    <td valign="top"><img src="images/sl_headshots_636.jpg" width="140" ></td>
+    <td valign="top">
+          <h1>Han Luu</h1><br>
+      <ul>
+
+  <b>undergraduate Student</b>
+    <br>Joined Lab in 2019
+
+
+      </ul>
+    </td>
+  </tr>
+
    
 
 </table>
