--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <h2>Software</h2>
     <ul>
 
-    <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/">IDP</a> - Isoform Detection and Prediction
+    <li><a href="http://www.augroup.org/IDP/IDP">IDP</a> - Isoform Detection and Prediction
       <br><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/IDP_download_current.asp"><img src="images/download.png">IDP 0.1.8</a> (<a href="http://www.healthcare.uiowa.edu/labs/au/IDP/IDP_download_current.asp#0.1">notes</a>)</li>
 
     <li><a href="http://www.augroup.org/IDP-ASE/IDP-ASE/">IDP-ASE</a> - IDP for Allele-Specific Expression
