--- a/index.html
+++ b/index.html
@@ -317,12 +317,12 @@
    
 
 <ul>
-      <li><a href="http://www.augroup.org/IDP-denovo/IDP-denovo">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
+      <li><a href="http://www.augroup.org/IDP-denovo.20160829/IDP-denovo">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
     </ul>
 
 
 <ul>
-      <li><a href="http://www.augroup.org/GenoClone/GenoClone">GenoClone</a> - Reveal tumor heterogeneity</li>
+      <li><a href="http://www.augroup.org/GenoClone/GenoClone/GenoClone">GenoClone</a> - Reveal tumor heterogeneity</li>
     </ul>
 
 
