--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
    
 
 <ul>
-      <li><a href="http://www.augroup.org/IDP-denovo.20160829/IDP-denovo">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
+      <li><a href="http://www.augroup.org/IDP-denovo.20160829/idp-denovo">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
     </ul>
 
 
