--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -66,7 +66,7 @@
   
 
   <tr>
-    <td valign="top"><img src="images/3.png" width="140" ></td>
+    <td valign="top"><img src="images/KinFai-Au.jpg" width="140" ></td>
     <td valign="top">
           <h1>Kin Fai Au</h1><br>
       <ul>
