--- a/AlignQC/alignqc.html
+++ b/AlignQC/alignqc.html
@@ -105,7 +105,7 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="alignqc">Home</a></li>
       
       <li><a href="AlignQC_download_current.asp">Downloads</a></li>
       <li><a href="AlignQC_contact.asp">Contact</a></li>
