--- a/IDP/IDP.html
+++ b/IDP/IDP.html
@@ -27,7 +27,7 @@
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
    <ul>
-    <li>IDP IS DEVELOPED BY <a href="http://www.healthcare.uiowa.edu/labs/au/">KIN FAI AU</a> with help from collaborators</li>
+    <li>IDP IS DEVELOPED BY <a href="http://www.augroup.org">KIN FAI AU</a> with help from collaborators</li>
   </ul>
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
@@ -60,7 +60,7 @@
 	</ul>
     </div>
 
-<p class="page_title_area_lower">Latest News:  IDP 0.1.6 major update is released ... <a href="default.asp#news">read more</a></p>
+<p class="page_title_area_lower">Latest News:  IDP 0.1.6 major update is released ... <a href="http://www.augroup.org/IDP/IDP">read more</a></p>
     
     
   </div>
@@ -267,8 +267,8 @@ redundancies will be handled by IDP.</p>
 
 <div id="footer">
     <ul>
-      <li>&copy; <a href=" http://www.healthcare.uiowa.edu/labs/au/">Kin Fai Au</a>.  All Rights Reserved.</li>
-      <li><a href=" http://www.uiowa.edu/">University of Iowa</a>, IA 52242.</li>
+      <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
+      <li><a href="https://www.osu.edu/">The Ohio State University</a>, OH 43210.</li>
     </ul>
 </div>
   
