--- a/IDP/IDP_manual.html
+++ b/IDP/IDP_manual.html
@@ -40,7 +40,7 @@
     <p>No explicit installation is required for IDP, however it does have some pre-requistes. </p> 
     <p>Long reads should be corrected with LSC first, and the corrected.fa and full.fa files should be concatonated into a single fasta for use in IDP i.e.: <br><i>$ cat full.fa corrected.fa > LR.fa</i></p>
     <p>Short reads should be aligned to the reference genome using SpliceMap.  An alignment (.sam) file and SpliceMap format bed file is required.</p>
-	<p>Please see IDP <a href="IDP_requirements.asp">requirements</a> for more details about required software.  </p>
+	<p>Please see IDP <a href="IDP_requirements.html">requirements</a> for more details about required software.  </p>
     <p></p>
     
     
