--- a/labmembers/labmembers.html
+++ b/labmembers/labmembers.html
@@ -83,20 +83,6 @@
   </tr>
 
 
-
- <tr>
-    <td valign="top"><img src="images/Diana2017.jpg" width="140" ></td>
-    <td valign="top">
-         <h1>Diana (Yue) Zhao</h1><br>
-      <ul>
- 
-  <b>Post-Doc</b> 
-    <br><a href="http://www.stat.uiowa.edu/">Department of Internal Medicine</a>
-    <br>Joined Lab in 2015
-      </ul>
-    </td>
-  </tr>
-
   
 
    
@@ -191,7 +177,7 @@
           <h1>Han Luu</h1><br>
       <ul>
 
-  <b>undergraduate Student</b>
+  <b>Undergraduate Student</b>
     <br>Joined Lab in 2019
 
 
@@ -204,12 +190,13 @@
 </table>
 
 <h1>Alumni</h1>
-
+  
  <li>Jason Weirather, Post-doc (2014-2017)</li>
  <li>Yingke Ma, Post-doc (2015-2016)</li>
 <li>Meng Zou, Post-doc (2016-2017)</li>
 <li>Andrew Thurman, Post-doc (2016-2018)</li>
 <li>Shuhua Fu, Post-doc (2015-2018)</li>
+<li>Diana (Yue) Zhao, Post-doc(2015-2018)</li>
 <br>
 <li>Benjamin Deonovic, Ph.D. student (2014-2017)</li>
 <li>Adam Hefel, Ph.D. rotation student (2015-2016)</li>
