--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
     <ul>
 
     <li><a href="http://www.augroup.org/IDP/IDP">IDP</a> - Isoform Detection and Prediction
-      <br><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/IDP_download_current.asp"><img src="images/download.png">IDP 0.1.8</a> (<a href="http://www.healthcare.uiowa.edu/labs/au/IDP/IDP_download_current.asp#0.1">notes</a>)</li>
+      <br><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/IDP_download_current.asp"><img src="images/download.png">IDP 0.1.8</a> (<a href="http://www.augroup.org/IDP/IDP_download_current.asp#0.1">notes</a>)</li>
 
     <li><a href="http://www.augroup.org/IDP-ASE/IDP-ASE ">IDP-ASE</a> - IDP for Allele-Specific Expression
-      <br><a href="http://www.augroup.org/IDP-ASE/IDP-ASE_download_current.html"><img src="images/download.png">IDP-ASE 20161017</a> (<a href="http://www.healthcare.uiowa.edu/labs/au/IDP-ASE/IDP-ASE_download_current.asp#0.1">notes</a>)</li>
+      <br><a href="http://www.augroup.org/IDP-ASE/IDP-ASE-download-current.html"><img src="images/download.png">IDP-ASE 20161017</a> (<a href="http://www.augroup.org/IDP-ASE/IDP-ASE-download-current.html#0.1">notes</a>)</li>
           
     <li><a href="http://www.augroup.org/IDP-fusion/IDP-fusion">IDP-fusion</a> - Fusion Isoform Detection and Prediction
       <br><a href="http://www.healthcare.uiowa.edu/labs/au/IDP-fusion/"><img src="images/download.png">IDP-fusion 1.1.1 </a> (<a href="http://www.healthcare.uiowa.edu/labs/au/IDP-fusion/IDP-fusion_download_current.asp#0.1">notes</a>)</li>
