--- a/IDP/IDP.html
+++ b/IDP/IDP.html
@@ -92,7 +92,7 @@
 	<div id="SpliceMap-LSC-IDP pipeline">
     <h2>SpliceMap-LSC-IDP pipeline</h2>
     </div>
-    <p>This hESC transcriptome is identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a>-<a href="http://www.healthcare.uiowa.edu/labs/au/LSC/">LSC</a>-<a href="http://www.healthcare.uiowa.edu/labs/au/IDP/">IDP</a> pipeline.</p>
+    <p>This hESC transcriptome is identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a>-<a href="http://www.augroup.org/LSC/LSC/">LSC</a>-<a href="http://www.augroup.org/IDP/IDP/">IDP</a> pipeline.</p>
 	<p>SpliceMap takes short reads from the Second Generation Sequencing platforms, such as Illumina, to detect exon junctions.</p>
 	<p>LSC makes use of the high-quality short reads to correct the long reads from PacBio platform. The output is the error-corrected long reads.</p>
 	<p>IDP uses the junction detections and the alignment of error-corrected long reads to detect the relatively short isoforms at full-length and predict the very long isoforms by statistical modeling. </p>
@@ -156,11 +156,11 @@ redundancies will be handled by IDP.</p>
     <ul>
     <li> One input of IDP is the short-read RNA-seq results: junctions (bed file) AND alignments of short reads (sam file). 
 	<br> Most RNA-seq tools, such as <a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> and Tophat can output these two files.</li>
-    <li> The other input is the long reads: raw sequences (FASTA file) OR alignment of long reads (PSL file by BLAT or <a href="IDP_gpd_format.asp">GPD file</a>)
-	<br> The error-corrected long reads from PacBio data is perferred. <a href="http://www.healthcare.uiowa.edu/labs/au/LSC/">LSC</a> is our default error-correction tool. </li>
+    <li> The other input is the long reads: raw sequences (FASTA file) OR alignment of long reads (PSL file by BLAT or <a href="IDP_gpd_format.html">GPD file</a>)
+	<br> The error-corrected long reads from PacBio data is perferred. <a href="http://www.augroup.org/LSC/LSC/">LSC</a> is our default error-correction tool. </li>
 	
-	<li> The IDP output are the gene isoform identifications and quantification of genes and gene isoforms. <a href="hESC.asp"> hESC transcriptome (H1 cell line)</a> is the first one identified by this methods. 
-	For more details of this transcriptome, please see its homepage <a href="hESC.asp"> <b>http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.html</b> </a> and our paper <b> Characterization of the human ESC transcriptome by hybrid sequencing </b>[<a href="http://www.healthcare.uiowa.edu/labs/au/pubs/IDP.pdf">preprint</a>].
+	<li> The IDP output are the gene isoform identifications and quantification of genes and gene isoforms. <a href="hESC.html"> hESC transcriptome (H1 cell line)</a> is the first one identified by this methods. 
+	For more details of this transcriptome, please see its homepage <a href="hESC.html"> <b>http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.html</b> </a> and our paper <b> Characterization of the human ESC transcriptome by hybrid sequencing </b>[<a href="http://www.augroup.org/IDP/IDP.pdf">preprint</a>].
 	
     </ul>
 
@@ -169,10 +169,10 @@ redundancies will be handled by IDP.</p>
 	<p>
    <h3><img src="images/dna.png"> 11-26-2013: Hompage of hESC transcriptome identified by SpliceMap-LSC-IDP pipline is released.</h3>
 
-   The homepage of <a href="hESC.asp"> hESC transcriptome (H1 cell line)</a> is released. You can also find novel genes, novel isoforms of existing genes (including pluripency markers) and novel ncRNA in this website: <br>
-   <center><a href="hESC.asp"> <b>http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.asp</b> </a> </center><br>
+   The homepage of <a href="hESC.html"> hESC transcriptome (H1 cell line)</a> is released. You can also find novel genes, novel isoforms of existing genes (including pluripency markers) and novel ncRNA in this website: <br>
+   <center><a href="hESC.html"> <b>http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.asp</b> </a> </center><br>
    The details of this hESC transcriptome can be in our publication:
-   <b> Characterization of the human ESC transcriptome by hybrid sequencing </b>[<a href="http://www.healthcare.uiowa.edu/labs/au/pubs/IDP.pdf">preprint</a>]
+   <b> Characterization of the human ESC transcriptome by hybrid sequencing </b>[<a href="http://www.augroup.org/IDP/IDP.pdf">preprint</a>]
     </p>
 	
 	<p>
@@ -216,7 +216,7 @@ redundancies will be handled by IDP.</p>
     <h2>Download</h2>
     <h3>Current release</h3>
     <ul>
-      <li><a href="IDP_download_current.asp"><img src="images/download.png"> IDP 0.1.9</a> (<a href="IDP_download_current.asp#notes">notes</a>)</li>
+      <li><a href="IDP_download_current.html"><img src="images/download.png"> IDP 0.1.9</a> (<a href="IDP_download_current.html#notes">notes</a>)</li>
     </ul>
 
         <h2>Useful links</h2>
@@ -239,7 +239,7 @@ redundancies will be handled by IDP.</p>
       <li><a href="http://www.augroup.org/IDP-fusion/IDP-fusion">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/IDP/hESC.asp">hESC transcriptome</a> - hESC transcriptome by IDP </li>
+      <li><a href="http://www.augroup.org/IDP/hESC.html">hESC transcriptome</a> - hESC transcriptome by IDP </li>
     </ul>
     <ul>
       <li><a href="http://www.augroup.org/AlignQC/alignqc">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
