--- a/IDP-ASE/IDP-ASE.html
+++ b/IDP-ASE/IDP-ASE.html
@@ -128,16 +128,16 @@
       <li><a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> - Novel splice junction discovery</li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/LSC/LSC/">LSC</a> - Error correction of PacBio long reads </li>
+      <li><a href="http://www.augroup.org/LSC/LSC">LSC</a> - Error correction of PacBio long reads </li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/IDP/IDP/">IDP</a> - Isoform Detection and Prediction  </li>
+      <li><a href="http://www.augroup.org/IDP/IDP">IDP</a> - Isoform Detection and Prediction  </li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/IDP-ASE/IDP-ASE/">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
+      <li><a href="http://www.augroup.org/IDP-ASE/IDP-ASE">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/IDP-fusion/IDP-fusion/">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
+      <li><a href="http://www.augroup.org/IDP-fusion/IDP-fusion">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
     </ul>
     <ul>
       <li><a href="http://www.augroup.org/IDP/hESC.html">hESC transcriptome</a> - hESC transcriptome by IDP </li>
