--- a/IDP-ASE/IDP-ASE-tutorial.html
+++ b/IDP-ASE/IDP-ASE-tutorial.html
@@ -119,7 +119,7 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.html">Home</a></li>
+      <li><a href="default.asp">Home</a></li>
       
       <li><a href="IDP-ASE_download_current.html">Downloads</a></li>
       <li><a href="IDP-ASE_contact.html">Contact</a></li>
