--- a/IDP/IDP.html
+++ b/IDP/IDP.html
@@ -160,7 +160,7 @@ redundancies will be handled by IDP.</p>
 	<br> The error-corrected long reads from PacBio data is perferred. <a href="http://www.augroup.org/LSC/LSC">LSC</a> is our default error-correction tool. </li>
 	
 	<li> The IDP output are the gene isoform identifications and quantification of genes and gene isoforms. <a href="hESC.html"> hESC transcriptome (H1 cell line)</a> is the first one identified by this methods. 
-	For more details of this transcriptome, please see its homepage <a href="hESC.html"> <b>http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.html</b> </a> and our paper <b> Characterization of the human ESC transcriptome by hybrid sequencing </b>[<a href="http://www.augroup.org/IDP/IDP.pdf">preprint</a>].
+	For more details of this transcriptome, please see its homepage <a href="hESC.html"> <b>http://www.augroup.org/IDP/hESC.html</b> </a> and our paper <b> Characterization of the human ESC transcriptome by hybrid sequencing </b>[<a href="http://www.augroup.org/IDP/IDP.pdf">preprint</a>].
 	
     </ul>
 
