--- a/IDP/IDP_cfg.html
+++ b/IDP/IDP_cfg.html
@@ -51,7 +51,7 @@
     <h3><img src="images/dna.png"> Example .cfg file</h3>
     <p>
     The following is an example .cfg file. It is included in every IDP download
-    which you can download here <a href="IDP_download_current.asp"><img src="images/download.png"> and run.cfg will be in the expanded folder</a>. The values
+    which you can download here <a href="IDP_download_current.html"><img src="images/download.png"> and run.cfg will be in the expanded folder</a>. The values
     which are optional are noted in the comments and you may comment them out. 
     </p>
 
