--- a/IDP/IDP_faq.html
+++ b/IDP/IDP_faq.html
@@ -17,7 +17,7 @@
   <!-- END PAGE TITLE AREA AND BOX -->
   <div id="content">
     <h2>FAQ</h2>
-    If you have any questions that have not been answered here, please <a href="IDP_contact.asp">contact</a> us.
+    If you have any questions that have not been answered here, please <a href="IDP_contact.html">contact</a> us.
     <h3><img src="images/dna.png"> What is IDP?</h3>
 	IDP is a program written entirely in python2.6 that is able to integrate the thrid generation long reads and the second generation 
     short reads to <b>identify gene isoforms</b>.
