--- a/IDP/IDP_howitworks.html
+++ b/IDP/IDP_howitworks.html
@@ -30,7 +30,7 @@
 	Abundance estimation is solved by Max A Posteriori of short read coverage. The priori is emprically approximated by direct-detection rate of transcripts w.r.t abundance and length.
     </p>
     <p>
-    IDP is geared towards any long reads and short reads, as long as they are generated from the same(at least similar) source. If you are having trouble running IDP, please <a href="IDP_contact.asp">let us know</a>. 
+    IDP is geared towards any long reads and short reads, as long as they are generated from the same(at least similar) source. If you are having trouble running IDP, please <a href="IDP_contact.html">let us know</a>. 
     </p>
     
 
